[project]
name = "flyte-agent-loop"
version = "0.1.0"
description = "A 'loop engineering' system: three scheduled Flyte 2 agents that pick up GitHub issues, open PRs, respond to PR review comments, and self-evaluate over durable memory."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Union.ai" }]
dependencies = [
    "flyte>=2.5.9",
    "litellm>=1.55",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
]

[project.scripts]
flyte-agent-loop-deploy = "flyte_agent_loop.deploy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flyte_agent_loop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Default collection is the hermetic unit suite. Integration tests live under
# tests/integration, are marked `integration`, and only run when explicitly
# targeted (see tests/integration/README.md).
testpaths = ["tests/unit"]
markers = [
    "integration: hits a live Union/Flyte cluster; run manually, not in CI.",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
# Pin the rule set explicitly so linting is deterministic across ruff versions.
# Ruff 0.16 expanded its *default* selection (adding UP, BLE, SIM, I, PL, ... ),
# which would otherwise flag intentional patterns here — e.g. the deliberate
# broad `except Exception` used for graceful pipeline recovery (BLE001). These are
# the classic pycodestyle-error + pyflakes defaults this project targets.
select = ["E4", "E7", "E9", "F"]
